[package]
name = "media-rename-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard = "0.5.0"
eframe = "0.22.0"
egui = "0.22.0"
egui_extras = "0.22.0"
env_logger = "0.10"
open = "4.1.0"
regex = "1.8.3"
rfd = "0.11"
winit = "0.28.6"
